--- a/play.htm
+++ b/play.htm
@@ -73,14 +73,15 @@
       function refresh(){
         setUrls();
         document.addEventListener("click", toggleFullScreen); 
-        setInterval("updateInfo();",5000);
+        setInterval("updateInfo();",1000);
       }
-      function updateSongInfo() {
+      function updateSongInfo(t) {
         var request = new XMLHttpRequest();
         request.onreadystatechange = function() {
           if (request.readyState === 4 && request.status == 200) {
             infoTxt = request.responseText;
             document.getElementById('songinfo').innerHTML = infoTxt;
+            document.getElementById('songinfo').attributes.itemprop.value = t;
           }
         }
         request.open("GET", infoUrl, true);
@@ -89,13 +90,13 @@
       function updateInfo() {
         epoch = Date.now();
         document.getElementById('coverart').src = imgUrl + "?time=" + epoch;
-        updateSongInfo();
+        updateSongInfo(epoch);
       }
       window.onload = refresh;
     </script>
     <div id="info">
       <img src="cover.jpg" id="coverart"></img>
-      <h1 id="songinfo"></h1>
+      <h1 id="songinfo" itemprop="0"></h1>
     </div>
   </body>
 </html>
