--- a/play.htm
+++ b/play.htm
@@ -1,110 +1,132 @@
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MPD player</title>
-  </head>
-  <body>
-    <style>
-     body {
-       background-color: black;
-     }
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>MPD player</title>
+    </head>
+    <body>
+        <style>
+body {
+    background-color: black;
+}
      audio {
-       width: 100%; 
+         width: 100%; 
      }
      img {
-       image-rendering: high-quality;
-       position: center;
-       width: 100%; 
-       height: auto;
+         image-rendering: high-quality;
+         position: center;
+         width: 300px; 
+         height: auto;
      }
-     h1 {
-       white-space: pre-wrap;
-       background-image: linear-gradient(to bottom, #cbddf2, #fcebd7);
-       -webkit-background-clip: text;
-       -webkit-text-fill-color: transparent;
-       font-weight:bold;
-     }
-     a {
-         text-decoration: none;
-     }
-    </style>
-    <script type="text/javascript">
-      streamPort = "8000";
-      infoTxt = "";
-      infoUrl = "";
-      imgUrl = "";
-      function dirname(path) {
-        return path.match(/.*\//);
-      }
-      function setUrls() {
-        params = new URLSearchParams(document.location.search.substring(1));
-        if (params.get("sp") != null){
-          streamPort = params.get("sp");
-        }
-        loc = window.location;
-        host = loc.hostname;
-        port = loc.port;
-        path = dirname(loc.pathname);
-        streamUrl = "http://" + host + ":" + streamPort;
-        if (port == ""){
-          imgUrl = "http://" + host + path + 'cover.jpg';
-          infoUrl = "http://" + host + path + 'last';
-        }
-        else {
-          imgUrl = "http://" + host + ":" + port + path + 'cover.jpg';
-          infoUrl = "http://" + host + ":" + port + path + 'last';
-        }
-        audio = document.createElement('audio');
-        audio.controls = true;
-        audio.type = 'audio/mp3';
-        audio.preload = 'auto';
-        audio.baseURI = streamUrl;
-        audio.src = streamUrl;
-        var i = document.getElementById("info");
-        i.appendChild(audio);
-      }
+h1 {
+    white-space: pre-wrap;
+    font-weight:bold;
+    font-family:sans-serif;
+    background: linear-gradient(to bottom, #cbddf2, #fcebd7);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 400% 400%;
 
-      function toggleFullScreen() {
-        var i = document.getElementById("info");
+    -webkit-animation: Groove 42s ease infinite;
+    -moz-animation: Groove 42s ease infinite;
+    animation: Groove 42s ease infinite;
+}
 
-        var requestFullScreen = i.requestFullscreen || i.mozRequestFullScreen || i.webkitRequestFullScreen || i.msRequestFullscreen;
-        var cancelFullScreen = document.exitFullscreen || document.mozCancelFullScreen || document.webkitExitFullscreen || document.msExitFullscreen;
+@-webkit-keyframes Groove {
+    0%{background-position:17% 0%}
+    50%{background-position:84% 100%}
+    100%{background-position:17% 0%}
+}
+@-moz-keyframes Groove {
+    0%{background-position:17% 0%}
+    50%{background-position:84% 100%}
+    100%{background-position:17% 0%}
+}
+@keyframes Groove {
+    0%{background-position:17% 0%}
+    50%{background-position:84% 100%}
+    100%{background-position:17% 0%}
+}
 
-        if(!document.fullscreenElement && !document.mozFullScreenElement && !document.webkitFullscreenElement && !document.msFullscreenElement) {
-          requestFullScreen.call(i);
-        }
-        else {
-          cancelFullScreen.call(document);
-        }
-      }
-      function refresh(){
-        setUrls();
-        document.addEventListener("click", toggleFullScreen); 
-        setInterval("updateInfo();",1000);
-      }
-      function updateSongInfo(t) {
-        var request = new XMLHttpRequest();
-        request.onreadystatechange = function() {
-          if (request.readyState === 4 && request.status == 200) {
-            infoTxt = request.responseText;
-            document.getElementById('songinfo').innerHTML = infoTxt;
-            document.getElementById('songinfo').style.display = 'none';
-            document.getElementById('songinfo').style.display = 'block';
-          }
-        }
-        request.open("GET", infoUrl, true);
-        request.send();
-      }
-      function updateInfo() {
-        epoch = Date.now();
-        document.getElementById('coverart').src = imgUrl + "?time=" + epoch;
-        updateSongInfo(epoch);
-      }
-      window.onload = refresh;
-    </script>
-    <div id="info">
-      <img src="cover.jpg" id="coverart"></img>
-      <h1 id="songinfo"></h1>
-    </div>
-  </body>
+        </style>
+        <script type="text/javascript">
+            streamPort = "8000";
+            infoTxt = "";
+            infoUrl = "";
+            imgUrl = "";
+            function dirname(path) {
+                return path.match(/.*\//);
+            }
+            function setUrls() {
+                params = new URLSearchParams(document.location.search.substring(1));
+                if (params.get("sp") != null){
+                    streamPort = params.get("sp");
+                }
+                loc = window.location;
+                host = loc.hostname;
+                port = loc.port;
+                path = dirname(loc.pathname);
+                streamUrl = "http://" + host + ":" + streamPort;
+                if (port == ""){
+                    imgUrl = "http://" + host + path + 'cover.jpg';
+                    infoUrl = "http://" + host + path + 'last';
+                }
+                else {
+                    imgUrl = "http://" + host + ":" + port + path + 'cover.jpg';
+                    infoUrl = "http://" + host + ":" + port + path + 'last';
+                }
+                audio = document.createElement('audio');
+                audio.controls = true;
+                audio.type = 'audio/mp3';
+                audio.preload = 'auto';
+                audio.baseURI = streamUrl;
+                audio.src = streamUrl;
+                var i = document.getElementById("info");
+                i.appendChild(audio);
+            }
+            function reload(){
+                window.location.reload(true);
+            }
+            function toggleFullScreen() {
+                var i = document.getElementById("coverart");
+                var m = document.getElementById("info");
+
+                var requestFullScreen = i.requestFullscreen || i.mozRequestFullScreen || i.webkitRequestFullScreen || i.msRequestFullscreen;
+                var cancelFullScreen = document.exitFullscreen || document.mozCancelFullScreen || document.webkitExitFullscreen || document.msExitFullscreen;
+
+                if(!document.fullscreenElement && !document.mozFullScreenElement && !document.webkitFullscreenElement && !document.msFullscreenElement) {
+                    requestFullScreen.call(m);
+                }
+                else {
+                    cancelFullScreen.call(document);
+                }
+            }
+            async function updateSongInfo(t) {
+                let res = await fetch(infoUrl);
+                if(res.ok){
+                    let infoTxt = await res.text();
+                    epoch = Date.now();
+                    document.getElementById('songinfo').innerHTML = infoTxt;
+                    document.getElementById('songinfo').style.display = 'none';
+                    document.getElementById('songinfo').style.display = 'block';
+                    document.getElementById('songinfo').setAttribute('itemprop', epoch);
+                }
+            }
+            function updateInfo(){
+                epoch = Date.now();
+                document.getElementById('coverart').src = imgUrl + "?time=" + epoch;
+                updateSongInfo(epoch);
+            }
+            function refresh(){
+                setUrls();
+                document.getElementById('coverart').addEventListener("click", toggleFullScreen); 
+                //document.getElementById('songinfo').addEventListener("click", reload); 
+                setInterval("updateInfo();",1000);
+            }
+            window.onload = refresh;
+        </script>
+        <div id="info">
+            <img src="cover.jpg" id="coverart"></img>
+            <h1 id="songinfo" itemprop="0"></h1>
+        </div>
+    </body>
 </html>
